--- a/static/style.css
+++ b/static/style.css
@@ -1,1 +1,40 @@
+body {
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.log-container {
+    background-color: #1e1e1e;
+    padding: 1em;
+    border-radius: 10px;
+    max-height: 400px;
+    overflow-y: auto;
+    border: 1px solid #444;
+}
+
+.log-line {
+    padding: 0.5em;
+    margin-bottom: 5px;
+    border-left: 4px solid transparent;
+    background-color: #2a2a2a;
+}
+
+.log-line.info {
+    border-left-color: #00d1b2;
+    color: #00d1b2;
+}
+
+.log-line.warning {
+    border-left-color: #f0ad4e;
+    color: #f0ad4e;
+}
+
+.log-line.error {
+    border-left-color: #ff3860;
+    color: #ff3860;
+}
+
+h4 {
+    border-bottom: 1px solid #555;
+    padding-bottom: 5px;
+}
 
